# probit

./: .clang-format  .gitignore  CMakeLists.txt  DESIGN.md  InverseCumulativeNormal.h  README.md  benchmark.sh  calibration.py  flake.nix
src/: InverseCumulativeNormal.h  InverseCumulativeNormalBase.h  ProbitSolver.cpp  ProbitSolver.hpp  calibration.py  main.cpp  main_base.cpp  main_batch.cpp  main_nopy.cpp  main_parallel.cpp  main_stream.cpp
